# cobalt

./: .gitignore  Procfile  README.md  cobalt.cabal  hirank-infer-constraints.cabal  stack.yaml
src/: Main.hs  MainU.hs
src/Cobalt/: Core.hs  ErrorSimpl.hs  Errors.hs  Graph.hs  Language.hs  OutsideIn.hs  Types.hs  U.hs  Util.hs
src/Cobalt/Core/: ErrorSimplifier.hs  Errors.hs  Graph.hs  Types.hs
src/Cobalt/Language/: Parser.hs  Syntax.hs  UnboundSyntax.hs
src/Cobalt/OutsideIn/: Gather.hs  Solver.hs  Top.hs
src/Cobalt/OutsideIn/Solver/: Step.hs
src/Cobalt/Script/: Gather.hs  RuleCheck.hs  Rules.hs  Script.hs  Solver.hs  Syntax.hs  Top.hs
src/Cobalt/U/: Attributes.hs  Gather.hs  Script.hs  Solver.hs
src/Cobalt/U/Rules/: Check.hs  Translation.hs
src/Language/Cobalt/: Gather.hs  Graph.hs  Infer.hs  Parser.hs  Solver.hs  Step.hs  Syntax.hs  Test.hs  Top.hs  Types.hs  Util.hs
src/Language/Cobalt/Solver/: Step.hs
src/Language/HigherRank/: Infer.hs  Parser.hs  Syntax.hs  Test.hs
src/Util/: ExceptTIsFresh.hs  Show.hs
static/: editor.html
test/: basic.cobalt  compr.cobalt  db.cobalt  example1.cobalt  example2.cobalt  example3.cobalt  expr.cobalt  from-papers.cobalt  listmatch.cobalt  num.cobalt  parser.cobalt  persist-esqueleto.cobalt  record.cobalt  simple.cobalt  singid.cobalt  st.cobalt  tyfams.cobalt
test/later/: db.cobalt  simple.cobalt
test/outsidein/: accepted.cobalt  from-flexible-types.cobalt  listmatch.cobalt  singid.cobalt  tyfams.cobalt
test/typerules/: Record.hs  compr.cobalt  db.cobalt  num.cobalt  parser.cobalt  persist-esqueleto.cobalt  record.cobalt  simple.cobalt  techreport.cobalt
