name:                cobalt
version:             0.1.0.0
synopsis:            COnstraint-BAsed Little Typecheker
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Language.Cobalt.Top,
                     Language.Cobalt.Types,
                     Language.Cobalt.Syntax,
                     Language.Cobalt.Parser,
                     Language.Cobalt.Gather,
                     Language.Cobalt.Solver
  other-modules:     Language.Cobalt.Solver.Step,
                     Language.Cobalt.Util,
                     Language.Cobalt.Graph
  build-depends:     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     split
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

executable cobalt
  build-depends:     cobalt,
                     ansi-terminal > 0.6,
                     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     aeson,
                     split,
                     scotty
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
