name:                cobalt
version:             0.1.0.0
synopsis:            COnstraint-BAsed Little Typecheker
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Cobalt.Types,
                     Cobalt.Errors,
                     Cobalt.ErrorSimpl,
                     Cobalt.Language.Syntax,
                     Cobalt.Language.Parser,
                     Cobalt.OutsideIn.Top,
                     Cobalt.OutsideIn.Gather,
                     Cobalt.OutsideIn.Solver,
                     Cobalt.Script.Syntax,
                     Cobalt.Script.Script,
                     Cobalt.Script.Rules,
                     Cobalt.Script.RuleCheck,
                     Cobalt.Script.Gather,
                     Cobalt.Script.Solver,
                     Cobalt.Script.Top
  other-modules:     Cobalt.OutsideIn.Solver.Step,
                     Cobalt.Util,
                     Cobalt.Graph
  build-depends:     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     split,
                     t-regex,
                     containers,
                     QuickCheck,
                     fgl
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50

executable cobalt
  build-depends:     cobalt,
                     ansi-terminal > 0.6,
                     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     aeson,
                     split,
                     scotty,
                     fgl
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50

executable cobalt-u
  build-depends:     cobalt,
                     ansi-terminal > 0.6,
                     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     aeson,
                     split,
                     t-regex,
                     containers,
                     scotty,
                     QuickCheck,
                     fgl
  main-is:           MainU.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50
