name:                cobalt
version:             0.1.0.0
synopsis:            COnstraint-BAsed Little Typecheker
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Cobalt.Core,
                     Cobalt.Language,
                     Cobalt.OutsideIn,
                     Cobalt.U
  other-modules:     Util.Show,
                     Util.ExceptTIsFresh,
                     Cobalt.Core.Graph,
                     Cobalt.Core.Types,
                     Cobalt.Core.Errors,
                     Cobalt.Core.ErrorSimplifier,
                     Cobalt.Language.Syntax,
                     Cobalt.Language.UnboundSyntax,
                     Cobalt.Language.Parser,
                     Cobalt.OutsideIn.Gather,
                     Cobalt.OutsideIn.Solver,
                     Cobalt.OutsideIn.Solver.Step,
                     Cobalt.U.Script,
                     Cobalt.U.Attributes,
                     Cobalt.U.Rules.Translation,
                     Cobalt.U.Rules.Check,
                     Cobalt.U.Gather,
                     Cobalt.U.Solver
  build-depends:     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     split,
                     t-regex,
                     containers,
                     QuickCheck,
                     fgl
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50

executable cobalt
  build-depends:     cobalt,
                     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     split,
                     t-regex,
                     containers,
                     QuickCheck,
                     fgl,
                     ansi-terminal > 0.6,
                     aeson,
                     scotty
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50

executable cobalt-u
  build-depends:     cobalt,
                     base >= 4 && < 5,
                     unbound,
                     parsec,
                     mtl > 2.2,
                     lens,
                     split,
                     t-regex,
                     containers,
                     QuickCheck,
                     fgl,
                     ansi-terminal > 0.6,
                     aeson,
                     scotty
  main-is:           MainU.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fcontext-stack=50
