name:                hirank-infer-constraints
version:             0.1.0.0
synopsis:            Higher-rank type inference using constraints
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
